0.1.2
  - skipDependencies switch is replaced by 
    a.) _.find( ranDependencies, doc[options.primaryKey] )
    b.) _.find( ranDependencies, curDependency )
  - preprocessor (.hooks.js) can have a .setup property (README.md updated)

0.1.1
  - fixes a lot of bugs in dependency engine
  - adds snippet plugin
  - adds markdown parser plugin (parses documents for markdown content and compiles it automatically)
  - jade requirement for snippet_parser plugin (this should be gone in the next release)
  - dependencies can handle doc: fn

0.1.0
  - is a complete redesign (again)
  - chainable
  - fixes bug where translations are mixed up

0.0.5
  - draftsPath option (allows to create a draft)
  - publishKey option (allows to hold back unpublished documents from compilation)

0.0.4
  - compile option: filenamePrefix allows
    /destination/<filenamePrefix>/filename.htm
  - dependencies option (in .settings.js)
  - after action (in <filename>.controller.js)