@@ -187,9 +187,17 @@
    *
    * @property options.publishingStatusKey
    * @type String
-   * @default 'status'
+   * @default null
    */
-  module.exports.publishingStatusKey = 'status';
+  module.exports.publishingStatusKey = null;
 
+  /**
+   * place a copy of the current render result in another file
+   *
+   * @property options.copyFilenames
+   * @type Array
+   * @default undefined
+   */
+  module.exports.copyFilenames;
 
 })();
