@@ -47,6 +47,8 @@ module.exports = function includes( Carver ){
   Carver.prototype.runDependencies = function runDependencies(){
     var compiler = this;
     var promise = new RSVP.Promise( function(resolve){ resolve(); });
+    if( !this.options.dependencies )
+      return promise;
     this.options.dependencies.forEach(function(dep){
       // if( !compiler.isLooping(dep) )
       if( dep.doc && dep.doc[compiler.options.primaryKey] ){
