@@ -28,11 +28,17 @@ module.exports.write = function fileWriter( filename, content, compiler, resolve
 
   fs.writeFileSync( filename, content );
 
+  if( compiler.options.copyFilenames && compiler.options.copyFilenames instanceof Array )
+    compiler.options.copyFilenames.forEach(function(copyFilename){
+      fs.writeFileSync( copyFilename+'.'+compiler.options.fileExtension+(compiler.options.lang && compiler.options.langExtension ? '.'+compiler.options.lang : ''));
+    });
+
   var stats = fs.statSync( filename );
 
   // console.log('written', stats.size, 'Bytes to', filename);
   compiler.logger.debug('written', stats.size, 'Bytes to', filename);
 
+  compiler.finalFilename = filename;
   compiler._ranDependencies.push( filename );
 
   resolve(content);
