@@ -120,9 +120,12 @@ module.exports = function Writers( Carver ){
       allWrittenPromise = allWrittenPromise.then( function(){ return compiler.contentLangWriter( lang ); });
     });
 
-    allWrittenPromise.then( function(){
-      // if( !compiler._skipDependencies )
-        return compiler.runDependencies(); 
+    allWrittenPromise = allWrittenPromise.then( function(){
+      return compiler.runDependencies(); 
+    });
+    
+    allWrittenPromise = allWrittenPromise.then(function(){
+      return new RSVP.Promise(function(resolve){ resolve(compiler); });
     });
 
     return allWrittenPromise;
@@ -189,7 +192,7 @@ module.exports = function Writers( Carver ){
 
       return new RSVP.Promise( function( resolve ){
 
-        if( compiler.options.doc && !options.draft && compiler.options.doc[compiler.options.publishingStatusKey] !== 'published' )
+        if( compiler.options.doc && !options.draft && compiler.options.publishingStatusKey && compiler.options.doc[compiler.options.publishingStatusKey] !== 'published' )
           return resolve();
 
         var writerUrl = url.parse( destination );
